# mtg-proxies

./: .gitignore  .pre-commit-config.yaml  print.py  pyproject.toml  tokens.py
.github/workflows/: python-package.yml
mtgproxies/: dimensions.py  print_cards.py  scans.py
mtgproxies/decklists/: decklist.py  sanitizing.py
mtgproxies/plotting/: __init__.py  corner_filling.py  fpdf_plotter.py  mpl_plotter.py
mtgproxies/scryfall/: __init__.py  scryfall.py
tests/: conftest.py  decklist_test.py  print_test.py  scans_test.py  scryfall_test.py
